@@ -28,6 +28,10 @@ sub inc {
     # With all line profilers except NYTProf, the time for that expression gets
     # assigned to the previous statement, i.e., the last statement executed in foo()!
     foo() && 'aaaaaaaaaaa' =~ /((a{0,5}){0,5})*[c]/;
+
+    # $&, $' and $` cause global slowdown in regex performance
+    my $dummy = $&;
+
     1;
 }
 
